logs/dag_id=dag_postgrest_v1/run_id=manual__2023-03-08T05:27:44.781607+00:00/task_id=create_postgres_table/attempt=6.log
[2023-03-08T05:38:42.151+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_postgrest_v1.create_postgres_table manual__2023-03-08T05:27:44.781607+00:00 [queued]>
[2023-03-08T05:38:42.166+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_postgrest_v1.create_postgres_table manual__2023-03-08T05:27:44.781607+00:00 [queued]>
[2023-03-08T05:38:42.167+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T05:38:42.167+0000] {taskinstance.py:1280} INFO - Starting attempt 6 of 11
[2023-03-08T05:38:42.167+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T05:38:42.188+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-03-08 05:27:44.781607+00:00
[2023-03-08T05:38:42.193+0000] {standard_task_runner.py:55} INFO - Started process 8254 to run task
[2023-03-08T05:38:42.197+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_postgrest_v1', 'create_postgres_table', 'manual__2023-03-08T05:27:44.781607+00:00', '--job-id', '88', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres.py', '--cfg-path', '/tmp/tmp9hgq1c6z']
[2023-03-08T05:38:42.199+0000] {standard_task_runner.py:83} INFO - Job 88: Subtask create_postgres_table
[2023-03-08T05:38:42.283+0000] {task_command.py:388} INFO - Running <TaskInstance: dag_postgrest_v1.create_postgres_table manual__2023-03-08T05:27:44.781607+00:00 [running]> on host df4d96e1a045
[2023-03-08T05:38:42.390+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Aditya
AIRFLOW_CTX_DAG_ID=dag_postgrest_v1
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-03-08T05:27:44.781607+00:00
AIRFLOW_CTX_TRY_NUMBER=6
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-08T05:27:44.781607+00:00
[2023-03-08T05:38:42.390+0000] {sql.py:254} INFO - Executing: 
        create table if not exists (
            dt date,
            dag_id character varying,
            primary key (dt, dag_id)
        )
        
[2023-03-08T05:38:42.402+0000] {base.py:73} INFO - Using connection ID 'postgrest_localhost' for task execution.
[2023-03-08T05:38:42.775+0000] {base.py:73} INFO - Using connection ID 'postgrest_localhost' for task execution.
[2023-03-08T05:38:42.781+0000] {sql.py:375} INFO - Running statement: 
        create table if not exists (
            dt date,
            dag_id character varying,
            primary key (dt, dag_id)
        )
        , parameters: None
[2023-03-08T05:38:42.782+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2:         create table if not exists (
                                           ^

[2023-03-08T05:38:42.794+0000] {taskinstance.py:1323} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_postgrest_v1, task_id=create_postgres_table, execution_date=20230308T052744, start_date=20230308T053842, end_date=20230308T053842
[2023-03-08T05:38:42.812+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 88 for task create_postgres_table (syntax error at or near "("
LINE 2:         create table if not exists (
                                           ^
; 8254)
[2023-03-08T05:38:42.852+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-03-08T05:38:42.881+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
